product detail update

--- a/chatgpt/css/style.css
+++ b/chatgpt/css/style.css
@@ -154,7 +154,7 @@ header.site-header {
   width: 36px;
   height: 36px;
   border-radius: 50%;
-  background-image: url("https://tinyurl.com/yc2v97hu");
+  background-image: url("../images/logo.jpg");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
