--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,9 @@ img {
 .muted {
   opacity: 0.85;
 }
+.deep-muted {
+  opacity: 0.65;
+}
 .visually-hidden {
   position: absolute !important;
   height: 1px;
